Помилка з методологією БЕМ

--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -399,7 +399,11 @@ img {
   margin-right: 50px;
 }
 
-.contacts-link {
+.contacts__link {
+  display: flex;
+  align-items: center;
+  padding-top: 35px;
+  padding-bottom: 35px;
   font-family: var(--primary-font-family);
   font-style: normal;
   font-weight: 500;
@@ -426,11 +430,11 @@ img {
   color: var(--main-color);
 }
 
-.nav-list-item:not(:last-child) {
+.nav-list__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.nav-link {
+.nav-list__link {
   position: relative;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -445,13 +449,6 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--secondary-text-color);
-}
-
-.contacts-link {
-  display: flex;
-  align-items: center;
-  padding-top: 35px;
-  padding-bottom: 35px;
 }
 
 .envelope {
