Рефакторинг методології ВЕМ

--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -9,10 +9,10 @@
     color: var(--accent-color);
 }
 
-.part-logo {
+.logo_theme_dark {
     color: var(--main-color);
 }
 
-.footer-part-logo {
+.logo_theme_light {
     color: var(--third-text-color);
 }
