--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -21,7 +21,7 @@
     color: var(--third-text-color);
 }
 
-.hero-button {
+.hero__button {
     margin: 0 auto;
     border: none;
     padding-top: 10px;
