--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 :root {
   --main-color: #212121;
   --accent-color: #2196f3;
@@ -69,7 +70,7 @@ img {
 }
 
 .link:hover,
-.link:focus {
+.link :focus {
   color: var(--accent-color);
 }
 
@@ -86,7 +87,7 @@ img {
   padding-right: 15px;
 }
 
-.header-container {
+.header__container {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -97,17 +98,7 @@ img {
   justify-content: space-between;
 }
 
-.social-list-link:hover .social-list-icon,
-.social-list-link:focus .social-list-icon {
-  fill: var(--third-text-color);
-}
-
-.social-list-link:hover,
-.social-list-link:focus {
-  background-color: var(--accent-color);
-}
-
-.social-list-link {
+.social-list__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -117,9 +108,18 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list-icon {
+.social-list__link:hover, .social-list__link:focus {
+  background-color: var(--accent-color);
+}
+
+.social-list__icon {
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-list__link:hover .social-list__icon,
+.social-list__link:focus .social-list__icon {
+  fill: var(--third-text-color);
 }
 
 .current {
@@ -150,8 +150,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link:hover,
-.link:focus {
+.link:hover, .link:focus {
   color: var(--accent-color);
 }
 
@@ -166,11 +165,11 @@ img {
   color: var(--accent-color);
 }
 
-.part-logo {
+.logo_theme_dark {
   color: var(--main-color);
 }
 
-.footer-part-logo {
+.logo_theme_light {
   color: var(--third-text-color);
 }
 
@@ -182,6 +181,12 @@ img {
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity 250ms linear, visibility 250ms linear;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
 
 .modal {
@@ -197,7 +202,7 @@ img {
   border-radius: 4px;
 }
 
-.modal-close-btn {
+.modal__close-btn {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -214,15 +219,8 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-btn:hover,
-.modal-close-btn:focus {
+.modal__close-btn:hover, .modal__close-btn:focus {
   fill: var(--accent-color);
-}
-
-.backdrop.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
 }
 
 .contact-text {
@@ -239,11 +237,11 @@ img {
   color: #212121;
 }
 
-.contact-form-field {
+.contact-form__field {
   display: block;
 }
 
-.contact-form-input {
+.contact-form__input {
   padding-left: 42px;
   width: 100%;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -254,16 +252,16 @@ img {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-form-input:focus {
+.contact-form__input:focus {
   outline: none;
   border-color: var(--accent-color);
 }
 
-.contact-form-input:focus + .contact-form-icon {
+.contact-form__input:focus + .contact-form__icon {
   fill: var(--accent-color);
 }
 
-.contact-form-text {
+.contact-form__text {
   width: 25px;
   height: 14px;
   font-family: var(--primary-font-family);
@@ -275,14 +273,14 @@ img {
   color: #757575;
 }
 
-.contact-form-input-wrapper {
+.contact-form__input-wrapper {
   margin-top: 4px;
   display: block;
   margin-bottom: 10px;
   position: relative;
 }
 
-.contact-form-icon {
+.contact-form__icon {
   position: absolute;
   top: 50%;
   left: 15px;
@@ -290,7 +288,7 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-form-message {
+.contact-form__message {
   width: 100%;
   height: 120px;
   margin-top: 4px;
@@ -309,16 +307,16 @@ img {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-form-message:focus {
+.contact-form__message:focus {
   outline: none;
   border-color: var(--accent-color);
 }
 
-.contact-form-checkbox-wrapper {
+.contact-form__checkbox-wrapper {
   margin-bottom: 20px;
 }
 
-.contact-form-checkbox-label {
+.contact-form__checkbox-label {
   font-size: 14px;
   font-family: var(--primary-font-family);
   font-style: normal;
@@ -329,7 +327,7 @@ img {
   color: #757575;
 }
 
-.contact-form-checkbox-label::before {
+.contact-form__checkbox-label::before {
   display: inline-block;
   width: 16px;
   height: 15px;
@@ -340,15 +338,15 @@ img {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-form-checkbox:hover + .contact-form-checkbox-label::before {
+.contact-form__checkbox:hover + .contact-form__checkbox-label::before {
   border-color: var(--accent-color);
 }
 
-.contact-form-checkbox:focus + .contact-form-checkbox-label::before {
+.contact-form__checkbox:focus + .contact-form__checkbox-label::before {
   outline: 2px solid var(--accent-color);
 }
 
-.contact-form-checkbox:checked + .contact-form-checkbox-label::before {
+.contact-form__checkbox:checked + .contact-form__checkbox-label::before {
   background-image: url("../image/Checkbox-image.svg");
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -356,7 +354,7 @@ img {
   border: 0, 2px solid var(--accent-color);
 }
 
-.contact-form-submit-btn {
+.contact-form__submit-btn {
   margin: 0 auto;
   border: none;
   padding-top: 10px;
@@ -379,12 +377,11 @@ img {
   cursor: pointer;
 }
 
-.contact-form-submit-btn:hover,
-.contact-form-submit-btn:focus {
+.contact-form__submit-btn:hover, .contact-form__submit-btn:focus {
   background-color: #188ce8;
 }
 
-.accept-policy-link {
+.contact-form__policy-link {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
@@ -399,11 +396,15 @@ img {
   border-bottom: 1px solid #ececec;
 }
 
-.contacts-item:not(:last-child) {
+.contacts__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.contacts-link {
+.contacts__link {
+  display: flex;
+  align-items: center;
+  padding-top: 35px;
+  padding-bottom: 35px;
   font-family: var(--primary-font-family);
   font-style: normal;
   font-weight: 500;
@@ -430,11 +431,11 @@ img {
   color: var(--main-color);
 }
 
-.nav-list-item:not(:last-child) {
+.nav-list__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.nav-link {
+.nav-list__link {
   position: relative;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -451,26 +452,14 @@ img {
   color: var(--secondary-text-color);
 }
 
-.contacts-link {
-  display: flex;
-  align-items: center;
-  padding-top: 35px;
-  padding-bottom: 35px;
-}
-
-.envelope {
+.сontacts-item__sprite-1 {
   margin-right: 10px;
   fill: currentColor;
 }
 
-.vector {
+.сontacts-item__sprite-2 {
   margin-right: 10px;
   fill: currentColor;
-}
-
-.astronaut {
-  background: #f5f4fa;
-  border-radius: 4px;
 }
 
 .hero {
@@ -494,7 +483,7 @@ img {
   color: var(--third-text-color);
 }
 
-.hero-button {
+.hero__button {
   margin: 0 auto;
   border: none;
   padding-top: 10px;
@@ -515,8 +504,11 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero-button:hover,
-.hero-button:focus {
+.hero__button:hover {
+  background: #188ce8;
+}
+
+.hero__button:focus {
   background: #188ce8;
 }
 
@@ -525,27 +517,19 @@ img {
   padding-top: 94px;
 }
 
-.qualities-picture {
-  display: flex;
-}
-
-.header-section-qualities {
-  display: none;
-}
-
-.qualities-head-list {
-  margin-bottom: 10px;
-}
-
 .qualities-list {
   display: flex;
 }
 
-.qualities-list-item {
+.qualities-list__item {
   width: 270px;
 }
 
-.qualities-image-box {
+.qualities-list__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.qualities-list__image-box {
   margin-bottom: 30px;
   display: flex;
   justify-content: center;
@@ -556,11 +540,8 @@ img {
   border-radius: 4px;
 }
 
-.qualities-list-item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.qualities-head-list {
+.qualities-list__title {
+  margin-bottom: 10px;
   font-family: var(--primary-font-family);
   font-style: normal;
   font-weight: bold;
@@ -571,7 +552,7 @@ img {
   color: var(--main-color);
 }
 
-.qualities-list-text {
+.qualities-list__text {
   font-family: var(--primary-font-family);
   font-style: normal;
   font-weight: normal;
@@ -585,11 +566,11 @@ img {
   padding-bottom: 94px;
 }
 
-.servicec-position {
+.servicec-list__position {
   position: relative;
 }
 
-.services-text {
+.services-list-position__text {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
@@ -630,7 +611,7 @@ img {
   display: flex;
 }
 
-.services-list-item:not(:last-child) {
+.services-list__item:not(:last-child) {
   padding-right: 30px;
 }
 
@@ -644,24 +625,24 @@ img {
   display: flex;
 }
 
-.team-list-item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.team-list-item {
+.team-list__item {
   background-color: var(--third-text-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
-.names-position {
+.team-list__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.names {
   padding-right: 32px;
   padding-left: 32px;
   padding-top: 30px;
   padding-bottom: 30px;
 }
 
-.names {
+.names__title {
   padding-bottom: 10px;
   font-family: var(--primary-font-family);
   font-style: normal;
@@ -673,7 +654,7 @@ img {
   color: var(--main-color);
 }
 
-.position {
+.names__position {
   margin-bottom: 16px;
   font-family: var(--primary-font-family);
   font-style: normal;
@@ -698,7 +679,7 @@ img {
   display: flex;
 }
 
-.client-list-item:not(:last-child) {
+.client-list__item:not(:last-child) {
   margin-right: 30px;
 }
 
@@ -714,152 +695,19 @@ img {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.logo-company {
+.client-list__link:hover .client-image-box,
+.client-list__link:focus .client-image-box {
+  border-color: var(--accent-color);
+}
+
+.client-image-box__logo {
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.client-list-link:hover .client-image-box,
-.client-list-link:focus .client-image-box {
-  border-color: var(--accent-color);
-}
-
-.client-list-link:hover .logo-company,
-.client-list-link:focus .logo-company {
+.client-list__link:hover .client-image-box__logo,
+.client-list__link:focus .client-image-box__logo {
   fill: var(--accent-color);
-}
-
-.section-projects {
-  padding-top: 94px;
-  padding-bottom: 114px;
-}
-
-.main-header-projects {
-  display: none;
-}
-
-.filters-list {
-  margin-bottom: 50px;
-  display: flex;
-  justify-content: center;
-  padding-right: 30px;
-}
-
-.filters-list-item:not(:last-child) {
-  margin-right: 8px;
-}
-
-.filters-btn {
-  padding-top: 6px;
-  padding-bottom: 6px;
-  padding-right: 22px;
-  padding-left: 22px;
-  background: #f5f4fa;
-  border: none;
-  border-radius: 4px;
-  font-family: var(--primary-font-family);
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--main-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.filters-btn:hover,
-.filters-btn:focus {
-  background: var(--accent-color);
-  color: var(--third-text-color);
-}
-
-.projects-list {
-  margin-right: -30px;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.projects-list-position {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 24px;
-  padding-right: 24px;
-  background: #ffffff;
-  border: 1px solid #eeeeee;
-  box-sizing: border-box;
-}
-
-.project-list-link {
-  display: block;
-}
-
-.project-list-link:hover .overlay,
-.project-list-link:focus .overlay {
-  transform: translateY(0%);
-}
-
-.project-list-link:hover,
-.project-list-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.projects-list-item:not(:nth-child(3n)) {
-  margin-right: 30px;
-}
-
-.projects-list-item:not(:nth-last-child(-n + 3)) {
-  margin-bottom: 30px;
-}
-
-.projects-img {
-  width: 370px;
-}
-
-.header-projects {
-  font-family: var(--primary-font-family);
-  font-style: normal;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  color: var(--main-color);
-}
-
-.projects-text {
-  font-family: var(--primary-font-family);
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.03em;
-  color: var(--secondary-text-color);
-}
-
-.project-list-content {
-  position: relative;
-  overflow: hidden;
-}
-
-.overlay {
-  background: rgba(33, 150, 243, 0.9);
-  padding: 63px 24px;
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  height: 294px;
-  weight: 370px;
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 156%;
-  letter-spacing: 0.03em;
-  color: #FFFFFF;
-  overflow: auto;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer {
@@ -873,7 +721,7 @@ img {
   margin-top: 20px;
 }
 
-.address-list-location {
+.address-list-item__location {
   font-family: var(--primary-font-family);
   font-style: normal;
   font-weight: normal;
@@ -883,11 +731,11 @@ img {
   color: var(--third-text-color);
 }
 
-.address-list-item:not(:last-child) {
+.address-list__item:not(:last-child) {
   margin-bottom: 10px;
 }
 
-.address-list-text {
+.address-list-item__text {
   font-family: var(--primary-font-family);
   font-style: normal;
   font-weight: normal;
@@ -914,21 +762,11 @@ img {
   color: var(--third-text-color);
 }
 
-.address-block {
+.footer-section__address-block {
   margin-right: 70px;
 }
 
-.footer-social-list-link:hover .footer-social-list-icon,
-.footer-social-list-link:focus .footer-social-list-icon {
-  fill: var(--third-text-color);
-}
-
-.footer-social-list-link:hover,
-.footer-social-list-link:focus {
-  background-color: var(--accent-color);
-}
-
-.footer-social-list-link {
+.footer-list-item__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -939,7 +777,16 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-social-list-icon {
+.footer-list-item__link:hover, .footer-list-item__link:focus {
+  background-color: var(--accent-color);
+}
+
+.footer-list-item__icon {
+  fill: var(--third-text-color);
+}
+
+.footer-list-item__link:hover .footer-list-item__icon,
+.footer-list-item__link:focus .footer-list-item__icon {
   fill: var(--third-text-color);
 }
 
@@ -948,20 +795,20 @@ img {
   align-items: baseline;
 }
 
-.footer-link-address {
+.footer-section__link-block {
   width: 206px;
   height: 80px;
 }
 
-.subscribe-form-wrapper {
+.footer-section__subscribe-form {
   margin-left: 93px;
 }
 
-.footer-form-item {
+.footer-form__item {
   display: flex;
 }
 
-.subscribe-form-input {
+.subscribe-form__input {
   margin-right: 12px;
   padding-left: 16px;
   padding-right: 16px;
@@ -972,17 +819,16 @@ img {
   width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
-  /* box-sizing: border-box; */
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
 }
 
-.subscribe-form-input:focus {
+.subscribe-form__input:focus {
   outline: none;
   border-color: var(--accent-color);
 }
 
-.subscribe-form-button {
+.subscribe-form__button {
   margin: 0 auto;
   border: none;
   padding-top: 10px;
@@ -1001,16 +847,15 @@ img {
   letter-spacing: 0.06em;
   color: var(--third-text-color);
   background: var(--accent-color);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.subscribe-btn-icn {
-  margin-left: 10px;
-}
-
-.subscribe-form-button:hover,
-.subscribe-form-button:focus {
+.subscribe-form__button:hover, .subscribe-form__button:focus {
   background-color: #188ce8;
+}
+
+.subscribe-form-button__icn {
+  margin-left: 10px;
 }
 /*# sourceMappingURL=main.css.map */
