--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 :root {
   --main-color: #212121;
   --accent-color: #2196f3;
@@ -86,7 +87,7 @@ img {
   padding-right: 15px;
 }
 
-.header-container {
+.header__container {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -97,11 +98,7 @@ img {
   justify-content: space-between;
 }
 
-.social-list:hover, .social-list:focus {
-  background-color: var(--accent-color);
-}
-
-.social-list-link {
+.social-list__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -111,13 +108,17 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list-icon {
+.social-list__link:hover, .social-list__link:focus {
+  background-color: var(--accent-color);
+}
+
+.social-list__icon {
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list-link:hover .social-list-icon,
-.social-list-link:focus .social-list-icon {
+.social-list__link:hover .social-list__icon,
+.social-list__link:focus .social-list__icon {
   fill: var(--third-text-color);
 }
 
@@ -164,11 +165,11 @@ img {
   color: var(--accent-color);
 }
 
-.part-logo {
+.logo_theme_dark {
   color: var(--main-color);
 }
 
-.footer-part-logo {
+.logo_theme_light {
   color: var(--third-text-color);
 }
 
@@ -180,6 +181,12 @@ img {
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity 250ms linear, visibility 250ms linear;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
 
 .modal {
@@ -195,7 +202,7 @@ img {
   border-radius: 4px;
 }
 
-.modal-close-btn {
+.modal__close-btn {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -212,14 +219,8 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-btn:hover, .modal-close-btn:focus {
+.modal__close-btn:hover, .modal__close-btn:focus {
   fill: var(--accent-color);
-}
-
-.backdrop.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
 }
 
 .contact-text {
@@ -236,11 +237,11 @@ img {
   color: #212121;
 }
 
-.contact-form-field {
+.contact-form__field {
   display: block;
 }
 
-.contact-form-input {
+.contact-form__input {
   padding-left: 42px;
   width: 100%;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -251,16 +252,16 @@ img {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-form-input:focus {
+.contact-form__input:focus {
   outline: none;
   border-color: var(--accent-color);
 }
 
-.contact-form-input:focus + .contact-form-icon {
+.contact-form__input:focus + .contact-form__icon {
   fill: var(--accent-color);
 }
 
-.contact-form-text {
+.contact-form__text {
   width: 25px;
   height: 14px;
   font-family: var(--primary-font-family);
@@ -272,14 +273,14 @@ img {
   color: #757575;
 }
 
-.contact-form-input-wrapper {
+.contact-form__input-wrapper {
   margin-top: 4px;
   display: block;
   margin-bottom: 10px;
   position: relative;
 }
 
-.contact-form-icon {
+.contact-form__icon {
   position: absolute;
   top: 50%;
   left: 15px;
@@ -287,7 +288,7 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-form-message {
+.contact-form__message {
   width: 100%;
   height: 120px;
   margin-top: 4px;
@@ -306,16 +307,16 @@ img {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-form-message:focus {
+.contact-form__message:focus {
   outline: none;
   border-color: var(--accent-color);
 }
 
-.contact-form-checkbox-wrapper {
+.contact-form__checkbox-wrapper {
   margin-bottom: 20px;
 }
 
-.contact-form-checkbox-label {
+.contact-form__checkbox-label {
   font-size: 14px;
   font-family: var(--primary-font-family);
   font-style: normal;
@@ -326,7 +327,7 @@ img {
   color: #757575;
 }
 
-.contact-form-checkbox-label::before {
+.contact-form__checkbox-label::before {
   display: inline-block;
   width: 16px;
   height: 15px;
@@ -337,15 +338,15 @@ img {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-form-checkbox:hover + .contact-form-checkbox-label::before {
+.contact-form__checkbox:hover + .contact-form__checkbox-label::before {
   border-color: var(--accent-color);
 }
 
-.contact-form-checkbox:focus + .contact-form-checkbox-label::before {
+.contact-form__checkbox:focus + .contact-form__checkbox-label::before {
   outline: 2px solid var(--accent-color);
 }
 
-.contact-form-checkbox:checked + .contact-form-checkbox-label::before {
+.contact-form__checkbox:checked + .contact-form__checkbox-label::before {
   background-image: url("../image/Checkbox-image.svg");
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -353,7 +354,7 @@ img {
   border: 0, 2px solid var(--accent-color);
 }
 
-.contact-form-submit-btn {
+.contact-form__submit-btn {
   margin: 0 auto;
   border: none;
   padding-top: 10px;
@@ -376,11 +377,11 @@ img {
   cursor: pointer;
 }
 
-.contact-form-submit-btn:hover, .contact-form-submit-btn:focus {
+.contact-form__submit-btn:hover, .contact-form__submit-btn:focus {
   background-color: #188ce8;
 }
 
-.accept-policy-link {
+.contact-form__policy-link {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
@@ -395,7 +396,7 @@ img {
   border-bottom: 1px solid #ececec;
 }
 
-.contacts-item:not(:last-child) {
+.contacts__item:not(:last-child) {
   margin-right: 50px;
 }
 
@@ -451,19 +452,14 @@ img {
   color: var(--secondary-text-color);
 }
 
-.envelope {
+.сontacts-item__sprite-1 {
   margin-right: 10px;
   fill: currentColor;
 }
 
-.vector {
+.сontacts-item__sprite-2 {
   margin-right: 10px;
   fill: currentColor;
-}
-
-.astronaut {
-  background: #f5f4fa;
-  border-radius: 4px;
 }
 
 .footer {
@@ -477,7 +473,7 @@ img {
   margin-top: 20px;
 }
 
-.address-list-location {
+.address-list-item__location {
   font-family: var(--primary-font-family);
   font-style: normal;
   font-weight: normal;
@@ -487,11 +483,11 @@ img {
   color: var(--third-text-color);
 }
 
-.address-list-item:not(:last-child) {
+.address-list__item:not(:last-child) {
   margin-bottom: 10px;
 }
 
-.address-list-text {
+.address-list-item__text {
   font-family: var(--primary-font-family);
   font-style: normal;
   font-weight: normal;
@@ -518,11 +514,11 @@ img {
   color: var(--third-text-color);
 }
 
-.address-block {
+.footer-section__address-block {
   margin-right: 70px;
 }
 
-.footer-social-list-link {
+.footer-list-item__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -533,16 +529,16 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-social-list-link:hover, .footer-social-list-link:focus {
+.footer-list-item__link:hover, .footer-list-item__link:focus {
   background-color: var(--accent-color);
 }
 
-.footer-social-list-icon {
+.footer-list-item__icon {
   fill: var(--third-text-color);
 }
 
-.footer-social-list-link:hover .footer-social-list-icon,
-.footer-social-list-link:focus .footer-social-list-icon {
+.footer-list-item__link:hover .footer-list-item__icon,
+.footer-list-item__link:focus .footer-list-item__icon {
   fill: var(--third-text-color);
 }
 
@@ -551,20 +547,20 @@ img {
   align-items: baseline;
 }
 
-.footer-link-address {
+.footer-section__link-block {
   width: 206px;
   height: 80px;
 }
 
-.subscribe-form-wrapper {
+.footer-section__subscribe-form {
   margin-left: 93px;
 }
 
-.footer-form-item {
+.footer-form__item {
   display: flex;
 }
 
-.subscribe-form-input {
+.subscribe-form__input {
   margin-right: 12px;
   padding-left: 16px;
   padding-right: 16px;
@@ -575,17 +571,16 @@ img {
   width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
-  /* box-sizing: border-box; */
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
 }
 
-.subscribe-form-input:focus {
+.subscribe-form__input:focus {
   outline: none;
   border-color: var(--accent-color);
 }
 
-.subscribe-form-button {
+.subscribe-form__button {
   margin: 0 auto;
   border: none;
   padding-top: 10px;
@@ -604,14 +599,15 @@ img {
   letter-spacing: 0.06em;
   color: var(--third-text-color);
   background: var(--accent-color);
+  cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.subscribe-form-button:hover, .subscribe-form-button:focus {
+.subscribe-form__button:hover, .subscribe-form__button:focus {
   background-color: #188ce8;
 }
 
-.subscribe-btn-icn {
+.subscribe-form-button__icn {
   margin-left: 10px;
 }
 
@@ -631,11 +627,11 @@ img {
   padding-right: 30px;
 }
 
-.filters-list-item:not(:last-child) {
+.filters-list__item:not(:last-child) {
   margin-right: 8px;
 }
 
-.filters-btn {
+.filters-list__btn {
   padding-top: 6px;
   padding-bottom: 6px;
   padding-right: 22px;
@@ -654,7 +650,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.filters-btn:hover, .filters-btn:focus {
+.filters-list__btn:hover, .filters-list__btn:focus {
   background: var(--accent-color);
   color: var(--third-text-color);
 }
@@ -665,7 +661,7 @@ img {
   flex-wrap: wrap;
 }
 
-.projects-list-position {
+.projects-list__position {
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 24px;
@@ -675,28 +671,28 @@ img {
   box-sizing: border-box;
 }
 
-.project-list-link {
+.project-list__link {
   display: block;
 }
 
-.project-list-link:hover, .project-list-link:focus {
+.project-list__link:hover, .project-list__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.project-list-link:hover .overlay,
-.project-list-link:focus .overlay {
+.project-list__link:hover .overlay,
+.project-list__link:focus .overlay {
   transform: translateY(0%);
 }
 
-.projects-list-item:not(:nth-child(3n)) {
+.projects-list__item:not(:nth-child(3n)) {
   margin-right: 30px;
 }
 
-.projects-list-item:not(:nth-last-child(-n + 3)) {
+.projects-list__item:not(:nth-last-child(-n + 3)) {
   margin-bottom: 30px;
 }
 
-.projects-img {
+.project-list__img {
   width: 370px;
 }
 
@@ -720,7 +716,7 @@ img {
   color: var(--secondary-text-color);
 }
 
-.project-list-content {
+.project-list__content {
   position: relative;
   overflow: hidden;
 }
