--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -6,7 +6,7 @@
     padding-right: 15px;
 }
 
-.header-container {
+.header__container {
     display: flex;
     align-items: center;
     justify-content: space-between;
