--- a/sass/components/_social-list-link.scss
+++ b/sass/components/_social-list-link.scss
@@ -1,13 +1,9 @@
 .social-list {
     display: flex;
     justify-content: space-between;
-    &:hover,
-    &:focus {
-        background-color: var(--accent-color);
-    }
 }
 
-.social-list-link {
+.social-list__link {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,15 +11,21 @@
     height: 44px;
     border-radius: 50%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
-
+    &:hover,
+    &:focus {
+        background-color: var(--accent-color);
+    }  
 }
 
-.social-list-icon {
+.social-list__icon {
     fill: #afb1b8;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    .social-list-link:hover &,
-    .social-list-link:focus & {
+    .social-list__link:hover &,
+    .social-list__link:focus & {
         fill: var(--third-text-color);
     }
 }
+
+
+
+
