--- a/sass/layout/_client.scss
+++ b/sass/layout/_client.scss
@@ -11,7 +11,7 @@
     display: flex;
 }
 
-.client-list-item:not(:last-child) {
+.client-list__item:not(:last-child) {
     margin-right: 30px;
 }
 
@@ -25,17 +25,17 @@
     width: 170px;
     height: 92px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        .client-list-link:hover &,
-        .client-list-link:focus & {
+        .client-list__link:hover &,
+        .client-list__link:focus & {
             border-color: var(--accent-color);
         }
 }
 
-.logo-company {
+.client-image-box__logo {
     fill: #afb1b8;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    .client-list-link:hover &,
-    .client-list-link:focus & {
+    .client-list__link:hover &,
+    .client-list__link:focus & {
         fill: var(--accent-color);
     }
 }
