--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -10,7 +10,7 @@
 
 
 
-.team-list-item {
+.team-list__item {
     background-color: var(--third-text-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -21,14 +21,14 @@
     }
 }
 
-.names-position {
+.names {
     padding-right: 32px;
     padding-left: 32px;
     padding-top: 30px;
     padding-bottom: 30px;
 }
 
-.names {
+.names__title {
     padding-bottom: 10px;
     font-family: var(--primary-font-family);
     font-style: normal;
@@ -40,7 +40,7 @@
     color: var(--main-color);
 }
 
-.position {
+.names__position {
     margin-bottom: 16px;
     font-family: var(--primary-font-family);
     font-style: normal;
